# cashfloh

./: .gitignore  LICENSE  README.md  default.categories.csv  default.rules.csv  default.settings.json  pyproject.toml
.run/: Local run with _test_data_.run.xml  cashfloh.run.xml  pytest.run.xml
app/: cashfloh.py  main.py
app/core/: data.py  logic.py  settings.py  writer.py
app/rules/: categories.py  rules.py
app/transformers/: transformer.py  transformer_dkb.py  transformer_voba.py
test/: test_categories.py  test_core.py  test_rules.py  test_transformers.py
